--- a/index.html
+++ b/index.html
@@ -13,10 +13,11 @@
 <body>
 
   <header>
-      <img src="logo.png" alt="Logo Eponine" class="logo">
+    <img src="logo.png" alt="Logo Eponine" class="logo">
   <div>
     <h1>Eponine Dias – Psychomotricienne</h1>
     <p>Psychomotricienne diplômée d'État – Séances et bilans à domicile</p>
+  <div>
   </header>
 
   <section>
