--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@ Les médiations et outils utilisés sont variés : jeux corporels ou jeux de soc
       📞 Téléphone : <strong>06 14 98 19 56</strong><br>
       📅 Prise de rendez-vous en ligne :<br>
     <p>
-  <a href="https://www.doctolib.fr/https://www.doctolib.fr/psychomotricien/toulouse/eponine-dias-toulouse" class="btn">Prendre rendez-vous sur Doctolib</a>
+  <a href="https://www.doctolib.fr/psychomotricien/toulouse/eponine-dias-toulouse" class="btn">Prendre rendez-vous sur Doctolib</a>
 </p>
 
       
