--- a/index.html
+++ b/index.html
@@ -22,9 +22,10 @@
   <section>
     <h2><i class="fas fa-user"></i> Qui suis-je ?</h2>
     <p class="texte-justifie">
-      Je suis psychomotricienne diplômée d’État depuis 2020.
-      J’accompagne enfants, adolescents et adultes à domicile,
-      en proposant des séances et des bilans psychomoteurs adaptés aux besoins de chacun.
+      Psychomotricienne diplômée d’État depuis 2020,
+      j’accompagne enfants, adolescents et adultes à domicile
+      en proposant des séances et des bilans psychomoteurs adaptés aux besoins de chacun.<br>
+      Un bilan initial est nécessaire avant de mettre en place un suivi si nécessaire.
     </p>
   </section>
   <section>
