--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@ Ils ont une origine neurobiologique et ont un important retentissement sur la vi
 </p>
 <br>
  <p class="texte-justifie">
-<strong><u>Selon le DSM-5, les principaux TND sont :</strong></u><br>
+<strong><u>Selon le DSM-5, les principaux troubles neurodéveloppementaux sont :</strong></u><br>
 <ul>
     <li>Trouble déficitaire de l’attention avec ou sans hyperactivité (TDA/H)</li>
     <li>Trouble du spectre de l’autisme (TSA)</li>
