--- a/index.html
+++ b/index.html
@@ -3,24 +3,31 @@
 <head>
   <meta charset="UTF-8">
   <title>Eponine Dias – Psychomotricienne à domicile</title>
+
+  <!-- CSS -->
   <link rel="stylesheet" href="style.css">
+
+  <!-- Google Font -->
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+
+  <!-- Font Awesome -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
-
-
 </head>
 
 <body>
 
+  <!-- HEADER -->
   <header>
     <img src="logo.png" alt="Logo Eponine" class="logo">
-  <div class="header-text">
-    <h1>Psychomotricienne diplômée d'État – Séances et bilans à domicile</h1>
-  <div>
+
+    <div class="header-text">
+      <h1>Psychomotricienne diplômée d'État – Séances et bilans à domicile</h1>
+    </div>
   </header>
 
+  <!-- QUI SUIS-JE -->
   <section>
-    <h2><i class="fas fa-user"></i> Qui suis-je ?</h2>
+    <h2 class="qui"><i class="fas fa-user"></i> Qui suis-je ?</h2>
     <p class="texte-justifie">
       Psychomotricienne diplômée d’État depuis 2020,
       j’accompagne enfants, adolescents et adultes à domicile
@@ -28,74 +35,11 @@
       Un bilan initial est nécessaire avant de mettre en place un suivi.
     </p>
   </section>
+
+  <!-- LA PSYCHOMOTRICITÉ -->
   <section>
-    <h2><i class="fas fa-brain"></i> La psychomotricité</h2>
+    <h2 class="psy"><i class="fas fa-brain"></i> La psychomotricité</h2>
+
     <p class="texte-justifie">
-      La psychomotricité est une discipline paramédicale qui s’intéresse aux liens entre le psychique (émotions, cognition, affectivité) et le moteur (gestes, posture, tonus, coordination).
-      Elle vise à harmoniser le développement corporel et psychique afin de favoriser le bien-être, l’autonomie et l’adaptation de la personne dans son environnement.<br>
-      Elle considère que le corps et l’esprit sont étroitement liés et que le développement, l’expression ou les difficultés d’une personne passent autant par le mouvement que par les fonctions mentales.<br>
-      Le psychomotricien intervient pour évaluer, prévenir et rééduquer des troubles qui affectent la motricité, la gestion du tonus, la relation à l’espace, au temps, au corps ou aux autres mais également pour renforcer les fonctions cognitives.<br>
-    </p>
-      
-<br>
- <p class="texte-justifie">
-Le psychomotricien est le spécialiste des troubles neurodéveloppementaux (TND).
-C’est un ensemble de troubles qui apparaissent durant le développement de l’enfant, généralement dès la petite enfance, et qui résultent d’un fonctionnement atypique du cerveau.<br>
-Ils affectent de manière durable plusieurs domaines : la communication, les interactions sociales, le langage, la motricité, l’attention, les apprentissages, la régulation comportementale et émotionnelle.
-Ils ont une origine neurobiologique et ont un important retentissement sur la vie quotidienne qu’il est possible d’atténuer ou de compenser grâce à un accompagnement adapté et précoce.<br>
-</p>
-<br>
- <p class="texte-justifie">
-<strong><u>Selon le DSM-5, les principaux troubles neurodéveloppementaux sont :</strong></u><br>
-<ul>
-    <li>Trouble déficitaire de l’attention avec ou sans hyperactivité (TDA/H)</li>
-    <li>Trouble du spectre de l’autisme (TSA)</li>
-    <li>Trouble développemental des coordinations (TDC / dyspraxie)</li>
-    <li>Trouble spécifique des apprentissages (dyslexie, dysorthographie, dyscalculie, trouble dysexécutif…)</li>
-    <li>Trouble de la communication (langage pragmatique, habiletés sociales, gestion des émotions…)</li>
-    <li>Déficience intellectuelle</li>
-    <li>Tics / syndrome de Gilles de la Tourette</li>
-</ul>
- </p>
-   <br>
- <p class="texte-justifie">
-Les médiations et outils utilisés sont variés : jeux corporels ou jeux de société, relaxation, activités rythmiques, travail de coordination, expression corporelle, travail écologique en milieu quotidien, travail de remédiation cognitive etc.
-..
-    </p>
-  </section>
-  <section>
-    <h2><i class="fas fa-list-check"></i> Prestations proposées</h2>
-    <ul>
-      <li>Bilan psychomoteur à domicile enfants / ados (3 heures environ) : 170 euros</li>
-      <li>Bilan psychomoteur à domicile adultes (2 heures environ): 160 euros</li>
-      <li>Séance de psychomotricité à domicile (30 minutes) : 35 euros</li>
-      <li>Séance de psychomotricité à domicile (45 minutes): 40 euros</li>
-      <li>Équipe éducative (1h à 2h): 45 euros</li>
-    </ul>
-  </section>
-  <section>
-    <h2><i class="fas fa-map-marker-alt"></i> Secteur d’intervention</h2>
-    <p>
-      J’interviens à domicile sur le secteur de <strong>[Toulouse]</strong> et ses environs.
-    </p>
-  </section>
-  <section>
-    <h2><i class="fas fa-envelope"></i> Contact</h2>
-    <p>
-      📧 Email : <strong>eponinedias.psychomot@outlook.fr</strong><br>
-      📞 Téléphone : <strong>06 14 98 19 56</strong><br>
-      📅 Prise de rendez-vous en ligne :<br>
-    <p>
-  <a href="https://www.doctolib.fr/psychomotricien/toulouse/eponine-dias-toulouse" class="btn">Prendre rendez-vous sur Doctolib</a>
-</p>
+      La psychomotricité est une discipline paramédicale qui s’intére
 
-      
-    </p>
-  </section>
-
-  <footer>
-    <p>© 2026 – Eponine Dias – Psychomotricienne</p>
-  </footer>
-
-</body>
-</html>
